k8s_jenkins_sonar/Sonar/sonar_service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonar-svc
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: sonar
